captcha/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: captcha-frontend-ingress
    namespace: captcha # <-- 반드시 captcha 네임스페이스 지정
    annotations:
        nginx.ingress.kubernetes.io/ssl-redirect: "true"
        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    labels:
        app: captcha-frontend
spec:
    ingressClassName: nginx # Ingress Controller의 ingressClassName과 일치 (Nginx Ingress 기본값)
    rules:
        - host: test.realcatcha.com # <--- !!! 여기에 당신의 프런트엔드 도메인 이름을 입력하세요 !!!
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: captcha-frontend-service
                            port:
                                number: 3000 # Service의 port와 일치
---
